tests/test-dirs/upstream-typing-recovery/original-tests/inside_mli.mli
val f : int -> float result
val g : unit -> (int, float) option
